Fixed the NPE.